syntax = "proto3";

package executors.v1.plan.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";
import "variables/v1/waypoint.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/executors/v1/plan/v1";

enum WaypointJobType {
  WAYPOINT_JOB_TYPE_UNSPECIFIED = 0;
  WAYPOINT_JOB_TYPE_BUILD = 1;
  WAYPOINT_JOB_TYPE_DEPLOY_ARTIFACT = 2;
  WAYPOINT_JOB_TYPE_DESTROY = 3;
}

enum RunnerJobType {
  RUNNER_JOB_TYPE_UNSPECIFIED = 0;

  // build runner jobs
  RUNNER_JOB_TYPE_DOCKER_BUILD = 100;
  RUNNER_JOB_TYPE_CONTAINER_IMAGE_BUILD = 101;
  RUNNER_JOB_TYPE_HELM_CHART_BUILD = 102;
  RUNNER_JOB_TYPE_TERRAFORM_MODULE_BUILD = 103;
  RUNNER_JOB_TYPE_NOOP_BUILD = 104;

  // sync runner jobs
  RUNNER_JOB_TYPE_CONTAINER_IMAGE_SYNC = 201;
  RUNNER_JOB_TYPE_OCI_SYNC = 202;
  RUNNER_JOB_TYPE_NOOP_SYNC = 203;

  // deploy jobs
  RUNNER_JOB_TYPE_HELM_CHART_DEPLOY = 300;
  RUNNER_JOB_TYPE_TERRAFORM_MODULE_DEPLOY = 301;
  RUNNER_JOB_TYPE_JOB_DEPLOY = 302;

  // sandbox jobs
  RUNNER_JOB_TYPE_SANDBOX_PROVISION = 400;
  RUNNER_JOB_TYPE_SANDBOX_DEPROVISION = 401;

  // runner jobs
  RUNNER_JOB_TYPE_RUNNER_PROVISION = 500;
  RUNNER_JOB_TYPE_RUNNER_DEPROVISION = 501;
}

message WaypointJob {
  // singleton id is an identifier that maps to the job, ensuring it's only attempted once
  string singleton_id = 1 [
    (validate.rules).string.min_len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  map<string, string> labels = 2 [(validate.rules).map = {min_pairs: 1}];

  uint64 job_timeout_seconds = 3 [
    (validate.rules).uint64.gt = 60,
    (tagger.tags) = "faker:\"oneof:120\""
  ];

  string hcl_config = 4 [(validate.rules).string.min_bytes = 1];
  string hcl_config_format = 5 [(validate.rules).string.min_bytes = 1];

  WaypointJobType job_type = 6;
  variables.v1.WaypointVariables variables = 7;
  RunnerJobType runner_job_type = 8;
}
